# SplamyMote

./: ir_on_ff.ipynb  package.json  sketch_apr22a.ino  splamymote.code-workspace  svelte.config.js  workspace.code-workspace
Analysis/: Install.md  colorremote.ods  ir_on_ff.ipynb  ir_sim
Arduino/: ir_esp8266.ino  wifi_test.ino
Backend/: Program.cs  SplamyMoteServer.csproj  SplamyMoteServer.sln  _Imports.razor  mote.json
Backend/Data/: IRCommunicator.cs  IRData.cs  IRManager.cs  IRMessage.cs
Backend/Pages/: Error.cshtml  Error.cshtml.cs  Index.razor  _Host.cshtml  _Layout.cshtml
Backend/Properties/: launchSettings.json
Backend/Shared/: MainLayout.razor
CycleEstimate/: Program.cs
Frontend/: Test.cs
Frontend/src/routes/: index.svelte
rustoino/: .gitignore  Cargo.toml  rust-toolchain.toml
rustoino/.cargo/: config.toml
rustoino/src/: ir_measure.rs  main.rs  time.rs
src/: app.html
src/routes/: __layout.svelte  error.svelte
