[package]
name = "rustoino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp8266-hal = { path = "../esp8266-hal", features = ["rt", "interrupt"] }
panic-halt = "0.2"
xtensa-lx = "0.7"
embedded-svc = { path = "../embedded-svc" }

[profile.dev]
lto = false

[profile.release]
lto = false
